fix: annotation [skip ci]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,10 +2,10 @@ en:
   nav:
     about: "About"
 
-  # devise:
-  #   sign_up: "Sign Up"
-  #   login: "Login"
-  #   logout: "Logout"
+  devise:
+    sign_up: "Sign Up"
+    login: "Login"
+    logout: "Logout"
 
   links:
     show: "Show"
