style: finish locales, fix flash stimulus controller

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -43,10 +43,16 @@ en:
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirmation link to confirm your new email address."
       updated: "Your account has been updated successfully."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
+      new:
+        label: Create your account
+        have_an_account_already: Have an account already?
     sessions:
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
+      new:
+        sign_in: Login
+        create_an_account: Create an account for FREE
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
@@ -61,3 +67,10 @@ en:
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
+  shared:
+    links:
+      back: Back
+      forgot_your_password: Forgot your password?
+      sign_in: Sign in
+      sign_up: Sign up
+      sign_out: Sign out
