--- a/config/locales/models/invoice_items.yml
+++ b/config/locales/models/invoice_items.yml
@@ -26,7 +26,7 @@ pt-BR:
         cFOP: CFOP
         cFOP_description: Código Fiscal de Operações e Prestacoes
         uCom: Unidade
-        qCom: Quantidade
+        qCom: Quant.
         vUnCom: Valor Unitário
         vProd: Valor Total
         indTot: Indicador de Total
